--- a/data/feats/ancestry-09-NjPZbQjJJIygS1ru.htm
+++ b/data/feats/ancestry-09-NjPZbQjJJIygS1ru.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You draw on your connection with the Shadow Plane to see through all but the deepest darkness.
-Avantage: Vous utilisez votre connexion avec le Plan de l'Ombre pour voir à travers tout, sauf l'obscurité la plus profonde.
+Avantage: Vous obtenez Vision dans le noir supérieure pendant 1 minute.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
