--- a/data/feats/ancestry-09-nqDhQdkgsnvebUMr.htm
+++ b/data/feats/ancestry-09-nqDhQdkgsnvebUMr.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Duperie ou en Intimidation|Fabrication de pièges artisanaux
 
 ------ Benefits and spoiler ----
 Benefits: Your snares are so befuddling that your victims rarely notice you slipping out of sight.
-Avantage: Vos pièges sont si déconcertants que vos victimes remarquent rarement que vous disparaissez.
+Avantage: Vos pièges sont tellement vicieux qu'ils occupent ou démoralisent les cibles.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature fails or critically fails a save against your snare.</p>
@@ -15,4 +15,4 @@ Avantage: Vos pièges sont si déconcertants que vos victimes remarquent raremen
 ------ Description (fr) ------
 <p><strong>déclencheur</strong> Une créature obtient un échec ou un échec critique à un jet de sauvegarde contre votre piège artisanal.</p>
 <hr />
-<p>Vos pièges artisanaux sont si embrouillés que vos victimes remarquent rarement que vous glissez hors de vue. Si vous êtes expert en Duperie, vous pouvrez Créer une diversion contre la créature déclencheuse. Si vous êtes expert en Intimidation, vous pouvez à la place Démoraliser la créature déclencheuse. Si vous avez les deux, choisissez un des  deux effets.</p>
+<p>Vos pièges artisanaux sont si embrouillés que vos victimes remarquent rarement que vous disparaissez hors de leur vue. Si vous êtes expert en Duperie, vous pouvrez Créer une diversion contre la créature déclencheuse. Si vous êtes expert en Intimidation, vous pouvez à la place Démoraliser la créature déclencheuse. Si vous êtes les deux, choisissez un des deux effets.</p>
