--- a/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
+++ b/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
@@ -2,12 +2,11 @@ Name: Riptide
 Nom: Contre-courant
 PrereqEN: Drag Down|expert in Athletics
 PrereqFR: Tirer vers le bas|expert en Athlétisme
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Drag a grabbed creature into nearby water
-Avantage: Faire glisser une créature saisie dans l'eau proche
+Avantage: Vous pouvez emporter une créature que vous agrippez dans l'eau.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are within 10 feet of water at least 10 feet deep, and your Speed is sufficient to reach the water in one Stride.</p>
