--- a/data/feats/ancestry-09-NnpUhj7d4RmfOKTE.htm
+++ b/data/feats/ancestry-09-NnpUhj7d4RmfOKTE.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You make a weapon unbearable to hold.
-Avantage: Vous rendez une arme insupportable à tenir.
+Avantage: Vous rendez une arme tellement brûlante qu'elle brûle votre adversaire à moins qu'il ne la lâche.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Vous rendez une arme insupportable à tenir.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous rendez une arme une impossible à tenir. Faites un test d'Athlétisme pour Désarmer une créature cible. Vous n'avez pas besoin d'avoir une main libre pour faire ce test de Désarmement. Si la tentative de Désarmement réussit, la cible subit [[/r 4d6 #feu]] dégâts de feu à moins de laisser tomber l'arme et sur un succès critique, il subit [[/r 4d6 #feu]] dégâts de feu et lâche l'arme. Si vous êtes légendaire en Athlétisme, cela passe à [[/r 8d6 #feu]] dégâts de feu.</p>
+<p>Vous rendez une arme une impossible à tenir.</p>
+<p>Faites un test d'Athlétisme pour Désarmer une créature cible. Vous n'avez pas besoin d'avoir une main libre pour faire ce test de Désarmement. Si la tentative de Désarmement réussit, la cible subit [[/r 4d6 #feu]] dégâts de feu à moins de laisser tomber l'arme et sur un succès critique, elle subit [[/r 4d6 #feu]] dégâts de feu et lâche l'arme. Si vous êtes légendaire en Athlétisme, cela passe à [[/r 8d6 #feu]] dégâts de feu.</p>
