--- a/data/feats/ancestry-09-O2iFrAt7hyELJlIR.htm
+++ b/data/feats/ancestry-09-O2iFrAt7hyELJlIR.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have some feature that allows you to quickly evade effects that restrain you.
-Avantage: Vous avez une caractéristique qui vous permet d'échapper rapidement aux effets qui vous retiennent.
+Avantage: Vous vous échapper avec facilité des effets qui vous entravent, vous saisissent ou vous immobilisent.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed}, @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized}, or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Restrained}.</p>
@@ -15,5 +15,5 @@ Avantage: Vous avez une caractéristique qui vous permet d'échapper rapidement 
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous êtes @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Saisi}, @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilisé} ou @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravé}.</p>
 <hr />
-<p>Vous avez la capacité de rapidement vous échapper des effets qui vous entravent. Faites un test pour vous Échapper. En cas de succès, vous pouvez Marchez rapidement, Faire un pas ou porter une Frappe avec une attaque à mains nues qui cible la créature à laquelle vous avez échappé. En cas d'échec, vous tentez de vous Échapper une seconde fois.</p>
+<p>Vous avez la capacité de rapidement vous échapper des effets qui vous entravent. Faites un test pour vous Échapper. En cas de succès, vous pouvez Marcher rapidement, Faire un pas ou porter une Frappe avec une attaque à mains nues qui cible la créature à laquelle vous avez échappé. En cas d'échec, vous tentez de vous Échapper une seconde fois.</p>
 <p>Vous augmentez votre pénalité d'attaque multiple en fonction des actions que vous avez entreprises, mais seulement après avoir terminé les deux actions.</p>
