--- a/data/feats/ancestry-09-nKkbEKbE9vfKWKdd.htm
+++ b/data/feats/ancestry-09-nKkbEKbE9vfKWKdd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You pause a moment to attune your senses to the stone around you.
-Avantage: Vous vous arrêtez un moment pour accorder vos sens à la pierre qui vous entoure.
+Avantage: Vous obtenez Perception des vibrations (imprécis) avec une portée de 6 m
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are standing on a stone or earthen surface.</p>
