--- a/data/pathfinder-bestiary-2/y9D2wh63pBzIyI7i.htm
+++ b/data/pathfinder-bestiary-2/y9D2wh63pBzIyI7i.htm
@@ -1,8 +1,8 @@
 Name: Giant Maggot
-Nom: 
-État: auto-trad
+Nom: Asticot géant
+État: libre
 
 ------ Description (en) ------
 Giant flies lay their eggs on the bodies of larger monsters or livestock. When they hatch, these eggs release squirming maggots the size of human children, ravenous young who voraciously consume any flesh in the immediate vicinity-typically starting with the body upon which they were born.<br /><br />
 ------ Description (fr) ------
-Les mouches géantes pondent leurs œufs sur le corps de monstres plus grands ou de bétail. Lorsqu'ils éclosent, ces œufs libèrent des asticots de la taille d'un enfant humain, des jeunes voraces qui consomment voracement toute chair à proximité immédiate - en commençant généralement par le corps sur lequel ils sont nés.<br /><br />
+Les mouches géantes pondent leurs œufs sur le corps de monstres plus grands ou de bétail. Lorsqu'ils éclosent, ces œufs libèrent des asticots de la taille d'un enfant humain, des jeunes asticots affamés qui consomment voracement toute chair à proximité immédiate - en commençant généralement par le corps sur lequel ils sont nés.<br /><br />
