--- a/data/pathfinder-bestiary-2/yvmX4J21XE1wqDar.htm
+++ b/data/pathfinder-bestiary-2/yvmX4J21XE1wqDar.htm
@@ -1,8 +1,8 @@
 Name: Esobok
-Nom: 
-État: auto-trad
+Nom: Ésobok
+État: libre
 
 ------ Description (en) ------
 Esoboks are brute hunters and pugnacious sentinels that serve as the guard dogs of the Boneyard. These squat, powerful quadrupeds have a frill of dark feathers around their distinctive heads which resemble a crocodile skull. Esoboks rarely bother with those who are truly dead, allowing the dead of the Boneyard to go about their business while remaining watchful for danger. Though cunning when sniffing out threats to the Boneyard or to their psychopomp handlers, they're among the least intelligent of the psychopomps and rarely speak except to utter growling threats. The wise listen when an esobok makes a threat, as it won't do so twice.<br /><br />
 ------ Description (fr) ------
-Les Esoboks sont des chasseurs brutaux et des sentinelles pugnaces qui servent de chiens de garde au Boneyard. Ces quadrupèdes trapus et puissants ont une collerette de plumes sombres autour de leur tête caractéristique qui ressemble à un crâne de crocodile. Les Esoboks s'occupent rarement de ceux qui sont vraiment morts, laissant les morts du Boneyard vaquer à leurs occupations tout en restant attentifs au danger. Bien qu'ils soient rusés lorsqu'il s'agit de flairer les menaces pour le Boneyard ou pour leurs manipulateurs psychopompes, ils font partie des moins intelligents des psychopompes et parlent rarement, sauf pour proférer des menaces en grognant. Les sages écoutent quand un esobok profère une menace, car il ne le fera pas deux fois.<br /><br />
+Les Ésobok sont des chasseurs brutaux et des sentinelles pugnaces qui servent de chiens de garde au Cimetière. Ces quadrupèdes trapus et puissants ont une collerette de plumes sombres autour de leur tête caractéristique qui ressemble à un crâne de crocodile. Les Ésoboks s'occupent rarement de ceux qui sont vraiment morts, laissant les morts du Cimetière vaquer à leurs occupations tout en restant attentifs au danger. Bien qu'ils soient rusés lorsqu'il s'agit de flairer les menaces possibles au Cimetière ou à l'encontre de leurs manipulateurs Psychopompes, ils font partie des moins intelligents des Psychopompes et parlent rarement, sauf pour proférer des menaces en grognant. Les sages écoutent quand un Ésobok profère une menace, car il ne le fera pas deux fois.<br /><br />
