--- a/data/pathfinder-bestiary-2/z39LYFGYmOsoGVSh.htm
+++ b/data/pathfinder-bestiary-2/z39LYFGYmOsoGVSh.htm
@@ -1,8 +1,8 @@
 Name: Hippocampus
-Nom: 
-État: auto-trad
+Nom: Hippocampe
+État: libre
 
 ------ Description (en) ------
 Hippocampi serve as steeds for aquatic humanoids or roam wild in the sea.<br /><br />
 ------ Description (fr) ------
-Les hippocampes servent de destriers aux humanoïdes aquatiques ou se promènent en liberté dans la mer<br /><br />
+Les Hippocampes servent de destriers aux humanoïdes aquatiques ou se promènent en liberté dans la mer<br /><br />
