--- a/data/pathfinder-bestiary-2/ZBTqN3DNjdreXCu7.htm
+++ b/data/pathfinder-bestiary-2/ZBTqN3DNjdreXCu7.htm
@@ -1,8 +1,8 @@
 Name: Mastodon
-Nom: 
-État: auto-trad
+Nom: Mastodonte
+État: libre
 
 ------ Description (en) ------
 Not to be confused with the larger mammoth, mastodons are primeval elephants who dwell predominantly in temperate forests. There, they travel in close-knit social groups and feed on the forest vegetation.<br /><br />
 ------ Description (fr) ------
-À ne pas confondre avec le mammouth, plus grand, les mastodontes sont des éléphants primitifs qui vivent principalement dans les forêts tempérées. Ils s'y déplacent en groupes sociaux très soudés et se nourrissent de la végétation de la forêt<br /><br />
+À ne pas confondre avec le mammouth, plus grand, les Mastodontes sont des éléphants primitifs qui vivent principalement dans les forêts tempérées. Ils s'y déplacent en groupes sociaux très soudés et se nourrissent de la végétation de la forêt<br /><br />
