--- a/data/feats/ancestry-09-ovMIxhiStlPE7tty.htm
+++ b/data/feats/ancestry-09-ovMIxhiStlPE7tty.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've studied your celestial heritage with the intent of better defending yourself, and you've found that your techniques are equally powerful against celestials, fiends, and other divine entities.
-Avantage: Tu as étudié ton héritage céleste dans le but de mieux te défendre, et tu as découvert que tes techniques sont aussi puissantes contre les célestes, les démons et les autres entités divines.
+Avantage: Vous obtenez un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets divins.
 
 ------ Description (en) ------
 <p>You've studied your celestial heritage with the intent of better defending yourself, and you've found that your techniques are equally powerful against celestials, fiends, and other divine entities. You gain a +1 circumstance bonus to all saving throws against divine effects.</p>
 ------ Description (fr) ------
-<p>Vous avez étudié votre héritage céleste dans l'intention de mieux vous défendre et vous avez trouvé que vos techniques sont également puissantes contrr les célestes, les fiélons et autre entités divines.</p>
+<p>Vous avez étudié votre héritage céleste dans l'intention de mieux vous défendre et vous avez découvert que vos techniques sont également puissantes contre les célestes, les fiélons et les autre entités divines.</p>
 <p>Vous obtenez un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets divins.</p>
