--- a/data/feats/ancestry-09-pe6cHJzzMm5Tr25G.htm
+++ b/data/feats/ancestry-09-pe6cHJzzMm5Tr25G.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You unfold your wings for travel and can keep them unfolded for 10 minutes.
-Avantage: Vous dépliez vos ailes pour voyager et pouvez les garder dépliées pendant 10 minutes.
+Avantage: Vous obtenez une Vitesse de vol pendant 10 minutes et améliorez votre Vol de l'oisillon.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous dépliez vos ailes pour voyager et pouvez les garder dépliées p
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous déployez vos ailes pour le voyage et les gardez dépliées pendant 10 minutes. Vous obtenez une vitesse de Vol égale à votre Vitesse au sol tant que vos ailessont déployées. Si vous possédez Vol de l'oisillon, vous obtenz un bonus de statut de +3 m à votre Vitesse de vol avec Vol juvénile. Comme à l'ordinaire, comme votre Vitesse de vol est dérivvée de votre Vitesse au sol, ce bonus de statut n'est pas cumulable avec un bonus de statut à votre Vitesse au sol, si vous en avez une.</p>
+<p>Vous déployez vos ailes pour le voyage et pouvez les garder dépliées pendant 10 minutes. Vous obtenez une vitesse de Vol égale à votre Vitesse au sol tant que vos ailes sont déployées. Si vous possédez Vol de l'oisillon, vous obtenez un bonus de statut de +3 m à votre Vitesse de vol avec Vol juvénile. Comme à l'ordinaire, comme votre Vitesse de vol est dérivée de votre Vitesse au sol, ce bonus de statut n'est pas cumulable avec un bonus de statut à votre Vitesse au sol, si vous en avez un.</p>
