--- a/data/feats/ancestry-09-O9z1MJpEaf6Y1Acd.htm
+++ b/data/feats/ancestry-09-O9z1MJpEaf6Y1Acd.htm
@@ -6,12 +6,12 @@ PrereqFR: Pas vif
 
 ------ Benefits and spoiler ----
 Benefits: You dart under the legs of your enemies in combat.
-Avantage: Vous vous faufilez sous les jambes de vos ennemis au combat.
+Avantage: Vous pouvez terminer un déplacement acrobatique dans l'espace d'un ennemi de taille grande ou supérieure.
 
 ------ Description (en) ------
 <p>You dart under the legs of your enemies in combat. You can end a successful @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Tumble Through} action in a Large or larger enemy's space.</p>
 <p>Also, when using the Step Lively feat, you can @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Step} into the triggering enemy's space. The enemy must have limbs or otherwise leave you enough room for this maneuver, as determined by the GM. For instance, you could share space with a giant or dragon, but not an ooze.</p>
 ------ Description (fr) ------
 <p>Vous passez dans les pieds de vos ennemis en combat.</p>
-<p>Vous pouvez terminer une action réussie de @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Déplacement acrobatique} dans la case d'un ennemi de taille Grande ou supérieure.</p>
+<p>Vous pouvez terminer une action réussie de @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Déplacement acrobatique} dans l'espace d'un ennemi de taille Grande ou supérieure.</p>
 <p>De plus, lorsque vous faites usage de Pas vif, vous pouvez @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} dans un espace déclenchant de l'ennemi. L'ennemi doit avoir des membres ou vous laisser autrement assez d'espace pour effectuer cette manœuvre, à la discrétion du MJ. Par exemple, vous pourriez partager une case avec un géant ou un dragon, mais pas avec une vase.</p>
