--- a/data/feats/ancestry-09-PxWdf4HAhZ8fUB3R.htm
+++ b/data/feats/ancestry-09-PxWdf4HAhZ8fUB3R.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to psychopomps gives you the power to glimpse the near future and protect corpses from the ravages of undeath.
-Avantage: Votre lien avec les psychopompes vous donne le pouvoir d'entrevoir le futur proche et de protéger les cadavres des ravages de la mort.
+Avantage: Vous pouvez lancer Augure et Préservation des morts une fois par jour chacun.
 
 ------ Description (en) ------
 <p>Your connection to psychopomps gives you the power to glimpse the near future and protect corpses from the ravages of undeath. You can cast @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augury}and @Compendium[pf2e.spells-srd.xRgU9rrhmGAgG4Rc]{Gentle Repose} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Votre relation avec les psychopompes vous donne le pouvoir de jeter un œil dans le futur proche et de protéger les corps des ravages de la mort-vivance.</p>
-<p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augure} et @Compendium[pf2e.spells-srd.xRgU9rrhmGAgG4Rc]{Préservation des morts} chacun une fois par jour comme des sorts innés divins de niveau 2.</p>
+<p>Votre relation avec les psychopompes vous donne le pouvoir de jeter un œil dans le futur proche et celui de protéger les corps des ravages de la mort-vivance.</p>
+<p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augure} et @Compendium[pf2e.spells-srd.xRgU9rrhmGAgG4Rc]{Préservation des morts} une fois par jour chacun comme des sorts innés divins de niveau 2.</p>
