--- a/data/feats/ancestry-09-Q1lGguNI4SqPwgVn.htm
+++ b/data/feats/ancestry-09-Q1lGguNI4SqPwgVn.htm
@@ -6,10 +6,11 @@ PrereqFR: Crachat du dragon
 
 ------ Benefits and spoiler ----
 Benefits: The blood of the Dragon Kings runs strong in your veins.
-Avantage: Le sang des rois dragons coule fort dans tes veines.
+Avantage: Vous pouvez lancer Souffle de dragon une fois par jour.
 
 ------ Description (en) ------
 <p>The blood of the Dragon Kings runs strong in your veins. Your draconic heritage is clearly visible, with hair that is almost entirely crimson, azure, or the like, and that shines like a dragon's scales. You can cast the @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{Dragon Breath} sorcerer bloodline spell as an innate arcane spell once per day, but you can use only the dragon breath that is associated with your heritage and that matches the energy type of your Dragon Spit feat. At 12th level and every 3 levels thereafter, the spell is heightened by an additional spell level.</p>
 ------ Description (fr) ------
-<p>Le sang des Rois dragons coule puissamment dans vos veines. Votre héritage draconique est clairement visible, avec des cheveux presque complètement écarlates, bleu azur ou équivalent, qui brillent comme les écailles d'un dragon.</p>
+<p>Le sang des Rois dragons coule puissamment dans vos veines.</p>
+<p>Votre héritage draconique est clairement visible, avec des cheveux presque complètement écarlates, bleu azur ou d'une teinte équivalente et brillant comme les écailles d'un dragon.</p>
 <p>Vous pouvez Lancer le sort de lignage d'ensorceleur @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{Souffle de dragon} comme un sort arcanique inné une fois par jour, mais vous ne pouvez utiliser que le seul souffle de dragon associé avec votre ascendance et qui doit correspondre au type d'énergie de votre don @Compendium[pf2e.feats-srd.UsJtnrqWOs7puRZa]{Crachat du dragon}. Au niveau 12 et tous les 3 niveaux subséquents, le sort est intensifié par un niveau de sort supplémentaire.</p>
