--- a/data/feats/ancestry-09-Q8XZYvatnYo4VlAQ.htm
+++ b/data/feats/ancestry-09-Q8XZYvatnYo4VlAQ.htm
@@ -6,9 +6,10 @@ PrereqFR: Descendant de lieu idyllique
 
 ------ Benefits and spoiler ----
 Benefits: The harmonious magic of Nirvana flows through you.
-Avantage: La magie harmonieuse du Nirvana coule en vous.
+Avantage: Vous pouvez lancer Forme animale et Apaisement des émotions une fois par jour chacun.
 
 ------ Description (en) ------
 <p>The harmonious magic of Nirvana flows through you. You can cast @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Animal Form} and @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Calm Emotions} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>La magie harmonieuse du Nirvana coule à travers vous. Vous pouvez lancer @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Forme animal} et @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Apaisement des émotions} une fois par jour chacun comme des sorts innés de niveau 2.</p>
+<p>La magie harmonieuse du Nirvana coule en vous.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Forme animale} et @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Apaisement des émotions} une fois par jour chacun comme des sorts innés de niveau 2.</p>
