--- a/data/feats/ancestry-09-pr7e8xzrl8OLp6U9.htm
+++ b/data/feats/ancestry-09-pr7e8xzrl8OLp6U9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: An acidic ooze coats your limbs.
-Avantage: Une sueur acide recouvre vos membres.
+Avantage: En cas de coup critique, vos attaques à mains nues infligent 1d4 dégâts d'acide persistants supplémentaires.
 
 ------ Description (en) ------
 <p>An acidic ooze coats your limbs. Your unarmed attacks deal an additional [[/r 1d4 #persistent acid]] persistent acid damage on a critical hit.</p>
