--- a/data/pathfinder-bestiary-2/ZKTz1ABoPTtlgYIy.htm
+++ b/data/pathfinder-bestiary-2/ZKTz1ABoPTtlgYIy.htm
@@ -1,8 +1,8 @@
 Name: Hound Archon
-Nom: 
-État: auto-trad
+Nom: Archon canin
+État: libre
 
 ------ Description (en) ------
 Among the rank-and-file soldiers of Heaven's armies, few individuals are more dependable and truer to the cause than the noble hound archons, embodiments of the virtue of diligence. Unlike horned archons, who perform at a similar level along Heaven's grand hierarchy, hound archons do not scout ahead for evil or perform reconnaissance missions in hostile territory. A hound archon's role is as a soldier in the heart of battle or, occasionally, as a sentinel tasked with protecting a particular strategic location or holy site.<br /><br />
 ------ Description (fr) ------
-Parmi les soldats de base des armées du Ciel, peu d'individus sont plus fiables et plus fidèles à la cause que les nobles archontes chiens, incarnations de la vertu de diligence. Contrairement aux archontes cornus, qui occupent un poste de même niveau dans la grande hiérarchie du Ciel, les archontes chiens de chasse ne partent pas en éclaireur à la recherche du mal et n'effectuent pas de missions de reconnaissance en territoire hostile. Le rôle d'un archonte chien est celui d'un soldat au cœur de la bataille ou, à l'occasion, celui d'une sentinelle chargée de protéger un lieu stratégique particulier ou un site sacré.<br /><br />
+Parmi les soldats de base des armées du Ciel, peu d'individus sont plus fiables et plus fidèles à la cause, que les nobles Archons Canins, incarnations de la vertu de diligence. Contrairement aux Archons Cornus, qui occupent un poste de même niveau dans la grande hiérarchie du Ciel, les Archons canins ne partent pas en éclaireur à la recherche du mal et n'effectuent pas de missions de reconnaissance en territoire hostile. Le rôle d'un Archon Canin est celui d'un soldat au cœur de la bataille ou, à l'occasion, celui d'une sentinelle chargée de protéger un lieu stratégique particulier ou un site sacré.<br /><br />
