--- a/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
+++ b/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
@@ -15,4 +15,5 @@ Avantage: Des particules cristallines vous masquent.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps sous la forme de brume. Vous devenez Masqué, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position reste toujours évidente. Les particules restent à quelques centimètres de votre peau, se déplaçant avec vous et persistent pendant un nombre de rounds égal à la moitié de votre niveau.</p>
+<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps sous la forme de brume.</p>
+<p>Vous devenez Masqué, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position reste toujours évidente. Les particules restent à quelques centimètres de votre peau, se déplaçant avec vous et persistent pendant un nombre de rounds égal à la moitié de votre niveau.</p>
