--- a/data/feats/ancestry-09-Qe9IUDVo7gsowMHq.htm
+++ b/data/feats/ancestry-09-Qe9IUDVo7gsowMHq.htm
@@ -2,14 +2,14 @@ Name: Fey Magic
 Nom: Magie des fées
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can use faerie magic to hide yourself and expose hidden foes.
-Avantage: Vous pouvez utiliser la magie des fées pour vous cacher et démasquer des ennemis cachés.
+Avantage: Vous pouvez lancer Lueurs féériques et Invisibilité une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You can use faerie magic to hide yourself and expose hidden foes. You can cast @Compendium[pf2e.spells-srd.HRb2doyaLtaoCfi3]{Faerie Fire} and @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} each once per day as primal innate spells.</p>
 ------ Description (fr) ------
-<p>Vous pouvez utiliser magie féérique pour vous cacher et exposer les ennemis cachés. Vous pouvez lancer @Compendium[pf2e.spells-srd.HRb2doyaLtaoCfi3]{Lueurs féériques} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés primordiaux.</p>
+<p>Vous pouvez utiliser magie féérique pour vous cacher et exposer les ennemis cachés.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.HRb2doyaLtaoCfi3]{Lueurs féériques} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés primordiaux.</p>
