--- a/data/feats/ancestry-09-RFXzsfEgz7WbDCQO.htm
+++ b/data/feats/ancestry-09-RFXzsfEgz7WbDCQO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You won't allow others to restrain you.
-Avantage: Vous ne permettrez pas aux autres de vous retenir.
+Avantage: Vous pouvez lancer Liberté de mouvement sur vous-même une fois par jour.
 
 ------ Description (en) ------
 <p>You won't allow others to restrain you. You can cast @Compendium[pf2e.spells-srd.aqRYNoSvxsVfqglH]{Freedom of Movement} on yourself as a primal innate spell once per day.</p>
