--- a/data/feats/ancestry-09-RTxPL1reRcJhhYeG.htm
+++ b/data/feats/ancestry-09-RTxPL1reRcJhhYeG.htm
@@ -7,9 +7,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can stoke your mind into a burst of analytical prowess.
-Avantage: Vous pouvez alimenter votre esprit en un élan de prouesses analytiques.
+Avantage: Vous pouvez lancer le sort Hypercognition une fois par jour.
 
 ------ Description (en) ------
 <p>You can stoke your mind into a burst of analytical prowess. You can cast 3rd-level @Compendium[pf2e.spells-srd.ZYoC630tNGutgbE0]{Hypercognition} once per day as a divine innate spell.</p>
 ------ Description (fr) ------
-<p>Vous pouvez obliger votre esprit à réaliser une poussée de prouesse analytique. Vous pouvez lancer le sort @Compendium[pf2e.spells-srd.ZYoC630tNGutgbE0]{Hypercognition} de niveau 3 une fois par jour comme un sort inné divin.</p>
+<p>Vous pouvez obliger votre esprit à se lancer dans une prouesse analytique.</p>
+<p>Vous pouvez lancer le sort @Compendium[pf2e.spells-srd.ZYoC630tNGutgbE0]{Hypercognition} de niveau 3 une fois par jour comme un sort inné divin.</p>
