--- a/data/feats/ancestry-09-rU9Aw05FFLVq0MTV.htm
+++ b/data/feats/ancestry-09-rU9Aw05FFLVq0MTV.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've trained to fight with allies in tunnel warrens, dense undergrowth, or similarly cramped terrain.
-Avantage: Vous vous êtes entraîné à vous battre avec des alliés dans des galeries, des sous-bois denses ou des terrains tout aussi exigus.
+Avantage: Vous pouvez partager l'espace d'une créature de taille Petite.
 
 ------ Description (en) ------
 <p>You’ve trained to fight with allies in tunnel warrens, dense undergrowth, or similarly cramped terrain. If you are Small or smaller, you can end your movement in the same square as a Small or smaller ally. No more than two creatures can share the same space when using this ability or a similar one.</p>
 ------ Description (fr) ------
-<p>Vous vous êtes entrainé à combattre avec des alliés dans des tunnels de terriers, les sous bois denses ou d'autres terrains exigus. Si vous êtes de taille Petite ou inférieure, Vous pouvez terminer votre déplacement dans la même case qu'un allié Petit ou de taille inférieure. Pas plus de deux créatures ne peut partager la même case lorsque vous utilisez cette capacité ou une autre similaire.</p>
+<p>Vous vous êtes entrainé à combattre avec des alliés dans les tunnels de terriers, les sous bois denses ou d'autres terrains exigus.</p>
+<p>Si vous êtes de taille Petite ou inférieure, Vous pouvez terminer votre déplacement dans la même case qu'un allié Petit ou de taille inférieure. Pas plus de deux créatures ne peuvent partager la même case lorsque vous utilisez cette capacité ou une autre similaire.</p>
