--- a/data/feats/ancestry-09-rw4qq4qmCbO0hRfH.htm
+++ b/data/feats/ancestry-09-rw4qq4qmCbO0hRfH.htm
@@ -6,9 +6,10 @@ PrereqFR: Enfant de braise
 
 ------ Benefits and spoiler ----
 Benefits: The shimmering embers of the righteous peris crackle at your fingertips.
-Avantage: Les braises chatoyantes du peris vertueux crépitent au bout de vos doigts.
+Avantage: Vous pouvez lancer Poussière scintillante et Rapport une fois par jour chacun.
 
 ------ Description (en) ------
 <p>The shimmering embers of the righteous peris crackle at your fingertips. You can cast @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust} and @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Status} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Les braises chatoyantes des droits péris crépitent au bout de vos doigts. Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Rapport} une fois par jour chacun comme des sorts innés divins de niveau 2.</p>
+<p>Les braises chatoyantes des vertueux péris crépitent au bout de vos doigts.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Rapport} une fois par jour chacun comme des sorts innés divins de niveau 2.</p>
