--- a/data/pathfinder-bestiary-2/zXZrUTQSI0WxAsF5.htm
+++ b/data/pathfinder-bestiary-2/zXZrUTQSI0WxAsF5.htm
@@ -1,8 +1,8 @@
 Name: Verdurous Ooze
-Nom: 
-État: auto-trad
+Nom: Vase Verte
+État: libre
 
 ------ Description (en) ------
 Verdurous oozes are found in temperate forests, warm jungles, or other places where plant life grows in abundance. Unlike many types of oozes, verdurous oozes are not particularly good climbers and have been known to get trapped in natural or artificial chasms. Warlords and wizards sometimes make use of that fact and keep verdurous oozes as guardians in pits around the walls of their fortresses or towers.<br /><br />
 ------ Description (fr) ------
-On trouve les oozes verdâtres dans les forêts tempérées, les jungles chaudes ou d'autres endroits où la vie végétale est abondante. Contrairement à de nombreux types de suintements, les suintements verdâtres ne sont pas de très bons grimpeurs et sont connus pour rester coincés dans des gouffres naturels ou artificiels. Les seigneurs de la guerre et les sorciers s'en servent parfois pour garder les oozes verdâtres dans des fosses autour des murs de leurs forteresses ou de leurs tours.<br /><br />
+On trouve les Vases vertes dans les forêts tempérées, les jungles chaudes ou d'autres endroits où la vie végétale est abondante. Contrairement à de nombreux types de vases, les Vases vertes ne sont pas de très bons grimpeurs et sont connus pour rester coincés dans des gouffres naturels ou artificiels. Les seigneurs de la guerre et les sorciers s'en servent parfois comme gardiens, les Vases vertes placées dans des fosses autour des murs de leurs forteresses ou de leurs tours.<br /><br />
