--- a/data/feats/ancestry-09-sGdREpnSJDzEacub.htm
+++ b/data/feats/ancestry-09-sGdREpnSJDzEacub.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your upbringing emphasized teamwork and helping your allies comes naturally to you.
-Avantage: Votre éducation a mis l'accent sur le travail d'équipe et aider vos alliés vous vient naturellement.
+Avantage: Vous aidez tout un groupe à effectuer un test de compétence.
 
 ------ Description (en) ------
 <p>Your upbringing emphasized teamwork and helping your allies comes naturally to you.</p>
