--- a/data/feats/ancestry-09-S7z1LbnSRlBep8rO.htm
+++ b/data/feats/ancestry-09-S7z1LbnSRlBep8rO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to the Boneyard empowers you to bring death to all forms of life and unlife, exploiting their weaknesses.
-Avantage: Votre connexion au Boneyard vous permet d'apporter la mort à toutes les formes de vie et de non-vie, en exploitant leurs faiblesses.
+Avantage: Vos frappes et vos attaques à mains nues infligent 1 dégât négati ou positif à votre cible.
 
 ------ Description (en) ------
 <p>Your connection to the Boneyard empowers you to bring death to all forms of life and unlife, exploiting their weaknesses.</p>
