--- a/data/feats/ancestry-09-SiedJ6hnDLEGeeBj.htm
+++ b/data/feats/ancestry-09-SiedJ6hnDLEGeeBj.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You hang onto a foe to harry them into submission.
-Avantage: Vous vous accrochez à un ennemi pour le harceler et le soumettre.
+Avantage: Vous vous accrochez à un ennemi et le suivez dans ses déplacements.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your last action was a successful Strike.</p>
@@ -18,8 +18,8 @@ Avantage: Vous vous accrochez à un ennemi pour le harceler et le soumettre.
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Votre dernière action était une Frappe réussie.</p>
 <hr />
-<p>Vous vous acharnez sur un ennemi pour le harceler jusqu'à ce obtenir sa soumission.</p>
+<p>Vous vous accrochez à un ennemi pour le harceler et obtenir sa soumission.</p>
 <p>Si votre cible se déplace alors que vous vous cramponnez à elle, vous pouvez choisir de vous déplacer avec la cible. La cible est relâchée si vous choisissez de ne pas vous déplacer avec elle, au début de votre prochain tour ou si la cible @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{S'Échappe}.</p>
-<p>Les essais pour s'échapper de Cramponné suivent les règles de S'Échapper mais utilisent votre DD d'Acrobaties et met un terme à Cramponné au lieu des conditions qui s'achèvent habituellement avec l'action s'Échapper.</p>
+<p>Les tentatives pour s'échapper de Cramponné suivent les règles de S'Échapper mais utilisent votre DD d'Acrobaties et mettent un terme à Cramponné au lieu des conditions qui s'achèvent habituellement avec l'action s'Échapper.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez utiliser cette action sans avoir de main libre si votre Frappe précédente était faite avec vos mâchoires ou une attaque à mains nues similaire que vous pourriez utiliser pour vous cramponner. Le MJ détermine laquelle des attaques à mains nues s'applique. Se cramponner de la sorte vous empêche d'utiliser cette attaque à mains nues.</p>
