--- a/data/feats/ancestry-09-T8cBEhuHWkh3MqgO.htm
+++ b/data/feats/ancestry-09-T8cBEhuHWkh3MqgO.htm
@@ -6,9 +6,10 @@ PrereqFR: Chance féline
 
 ------ Benefits and spoiler ----
 Benefits: You can tell when something's off.
-Avantage: Tu peux dire quand quelque chose ne va pas.
+Avantage: Vous pouvez relancer l'initiative après avoir obtenu le résultat du test.
 
 ------ Description (en) ------
 <p>You can tell when something’s off. You can trigger Cat’s Luck after you roll initiative, in addition to its normal trigger, to reroll your Initiative and take the higher of the two results. This still counts against Cat’s Luck’s frequency, as normal.</p>
 ------ Description (fr) ------
-<p>Vous pouvez dire lorsque quelque chose est anormal. Vous pouvez déclencher Chance féline après avoir lancé l'initiative, en plus de son déclencheur normal, pour relancer votre initiative et prenez le plus éleve des deux résultats. Cela est toujours décompté du nombre d'utilisation de Chance féline, comme à l'ordinaire.</p>
+<p>Vous pouvez dire lorsque quelque chose est anormal.</p>
+<p>Vous pouvez déclencher Chance féline après avoir lancé l'initiative, en plus de son déclencheur normal, pour relancer votre initiative et prendre le plus élevé des deux résultats. Cela est toujours décompté du nombre d'utilisation de Chance féline, comme à l'ordinaire.</p>
