--- a/data/feats/ancestry-09-Tl8yckXeTCHnwrlM.htm
+++ b/data/feats/ancestry-09-Tl8yckXeTCHnwrlM.htm
@@ -6,7 +6,7 @@ PrereqFR: héritage tengu des cieux
 
 ------ Benefits and spoiler ----
 Benefits: To be a tengu is to be unburdened by the concerns of the world below.
-Avantage: Être un tengu, c'est être libéré des préoccupations du monde d'en bas.
+Avantage: Vous obtenez une vitesse de vol pendant 5 minutes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong>: Once per day.</p>
@@ -15,4 +15,5 @@ Avantage: Être un tengu, c'est être libéré des préoccupations du monde d'en
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> Une fois par jour.</p>
 <hr>
-<p>Être un tengu permet d'être libéré des préoccupations du monde du dessous. Vous obtenez une paire d'ailes magiques ou étendez celles que vous possédez déjà. Pendant 5 minutes, vous obtenez une Vitesse de @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Vol} égale à votre Vitesse au sol ou 6 m, celle qui est la plus élevée.</p>
+<p>Être un tengu permet d'être libéré des préoccupations du monde du dessous.</p>
+<p>Vous obtenez une paire d'ailes magiques ou étendez celles que vous possédez déjà. Pendant 5 minutes, vous obtenez une Vitesse de @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Vol} égale à votre Vitesse au sol ou 6 m, celle qui est la plus élevée.</p>
