--- a/data/feats/ancestry-09-sbAb2a6BzZpcYv8y.htm
+++ b/data/feats/ancestry-09-sbAb2a6BzZpcYv8y.htm
@@ -1,12 +1,12 @@
 Name: Mother’s Mindfulness
-Nom: Pleine conscience de la mère
+Nom: Instinct maternel conscient 
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have the protective instinct your own mother lacks and will gladly suffer in another's place.
-Avantage: Vous avez l'instinct de protection qui manque à votre propre mère et vous souffrirez volontiers à la place d'une autre.
+Avantage: Vous subissez l'attaque qui frappe un allié adjacent et subisse les dégâts à sa place.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per minute<br /><strong>Trigger</strong> An adjacent ally is hit by an attack.</p>
@@ -16,4 +16,5 @@ Avantage: Vous avez l'instinct de protection qui manque à votre propre mère et
 <p><strong>Fréquence</strong> une fois par minute</p>
 <p><strong>Déclencheur</strong> un allié adjacent est atteint par une attaque.</p>
 <hr />
-<p>Vous avez l'instinct protecteur dont votre propre mère manque et allez souffrir au lieu d'un autre avec plaisir. Vous vous interposez vous-même sur le chemin de l'attaque. Vous êtes la cible de l'attaque déclencheuse et êtes automatiquement touché par l'attaque (ou atteint de manière critique si l'allié a été touché de manière critique), en subissant les pleins effets à la place de votre allié.</p>
+<p>Vous avez l'instinct protecteur dont votre propre mère manque et allez souffrir au lieu d'un autre avec plaisir.</p>
+<p>Vous vous interposez vous-même sur le chemin de l'attaque. Vous êtes la cible de l'attaque déclencheuse et êtes automatiquement touché par l'attaque (ou atteint de manière critique si l'allié a été touché de manière critique), en subissant les pleins effets à la place de votre allié.</p>
