--- a/data/feats/ancestry-09-Twhkz2FfzaZezVnG.htm
+++ b/data/feats/ancestry-09-Twhkz2FfzaZezVnG.htm
@@ -6,10 +6,10 @@ PrereqFR: Phasage inattendu
 
 ------ Benefits and spoiler ----
 Benefits: You have grown more comfortable with your penchant for supernatural disappearance.
-Avantage: Vous êtes devenu plus à l'aise avec votre penchant pour les disparitions surnaturelles.
+Avantage: Votre phasage inattendu est plus fréquent et ne vous inflige pas la condition Ébloui.
 
 ------ Description (en) ------
 <p>You have grown more comfortable with your penchant for supernatural disappearance. The flat check DC of your Fortuitous Shift feat decreases to 11, and you are no longer @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled} if you succeed.</p>
 ------ Description (fr) ------
 <p>Vous êtes devenu plus à l'aise avec votre penchant pour la disparition surnaturelle.</p>
-<p>Le DD du test nu de votre don Phasage inattendu descend à 11 et vous n'être plus @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{ébloui} si vous réussissez.</p>
+<p>Le DD du test nu de votre don Phasage inattendu descend à 11 et vous n'être plus @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} si vous réussissez.</p>
