--- a/data/feats/ancestry-09-UdwXT24zrLzg2ZIV.htm
+++ b/data/feats/ancestry-09-UdwXT24zrLzg2ZIV.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your swim Speed increases to match your land Speed.
-Avantage: Votre vitesse de nage augmente pour correspondre à votre vitesse terrestre.
+Avantage: Votre vitesse de nage est égale à votre Vitesse.
 
 ------ Description (en) ------
 <p>Your swim Speed increases to match your land Speed.</p>
