--- a/data/feats/ancestry-09-tyae2vpOiAMxXvQH.htm
+++ b/data/feats/ancestry-09-tyae2vpOiAMxXvQH.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your body is capable of recycling its own air.
-Avantage: Votre corps est capable de recycler son propre air.
+Avantage: Vous pouvez retenir votre souffle pendant une heure de plus.
 
 ------ Description (en) ------
 <p>Your body is capable of recycling its own air. When you hold your breath, you can do so for an additional hour. At the end of this hour, your body needs to rest before it can recycle air again. This rest requires 10 minutes of exposure to breathable air.</p>
 ------ Description (fr) ------
-<p>Votre corps est capable de recycler son propre air. Lorsque vous retenez votre souffle, vous pouvez le faire pendant une heure supplémentaire. Au terme de cette heure, votre corps a besoin de se reposer avant de pouvoir de nouveau recycler de l'air. Ce repos nécessite 10 minutes d'exposition à l'air respirable.</p>
+<p>Votre corps est capable de recycler son propre air.</p>
+<p>Lorsque vous retenez votre souffle, vous pouvez le faire pendant une heure supplémentaire. Au terme de cette heure, votre corps a besoin de se reposer avant de pouvoir de nouveau recycler de l'air. Ce repos nécessite 10 minutes d'exposition à l'air respirable.</p>
