--- a/data/feats/ancestry-09-u94fcPT5Oukqzql5.htm
+++ b/data/feats/ancestry-09-u94fcPT5Oukqzql5.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can cast purify food and drink as a primal innate spell, but only on liquids.
-Avantage: Vous pouvez lancer purifier la nourriture et la boisson en tant que sort inné primitif, mais uniquement sur les liquides.
+Avantage: Vous pouvez lancer Purifier la nourriture et la boisson uniquement sur les liquides et pouvez conférer un bonus de statut de +2 contre le poison à une créature.
 
 ------ Description (en) ------
 <p>You can cast @Compendium[pf2e.spells-srd.qXTB7Ec9yYh5JPPV]{Purify Food and Drink} as a primal innate spell, but only on liquids. You can cast this spell once every 10 minutes. You can also use your innate purify food and drink on a touched creature instead of a liquid to purify their blood, giving that creature a +2 status bonus for 1 minute on their ongoing saves against poisons already present in their body when you cast the spell.</p>
