--- a/data/feats/ancestry-09-uOFzs058hy144rzm.htm
+++ b/data/feats/ancestry-09-uOFzs058hy144rzm.htm
@@ -2,15 +2,14 @@ Name: Captivating Curiosity
 Nom: Curiosité captivante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can snare the attentions of onlookers with your unique appearance.
-Avantage: Vous pouvez attirer l'attention des badauds grâce à votre apparence unique.
+Avantage: Vous pouvez lancer Discours captivant une fois par jour.
 
 ------ Description (en) ------
 <p>You can snare the attentions of onlookers with your unique appearance. You can cast @Compendium[pf2e.spells-srd.IihxWhRfpsBgQ5jS]{Enthrall} as a 3rd-level occult innate spell once per day.</p>
 ------ Description (fr) ------
-<p>Vous pouvez capturer l'attention des spectateurs avec votre apparence unique.</p>
+<p>Vous pouvez attirer l'attention des spectateurs par votre apparence unique.</p>
 <p>Vous pouvez lancer @Compendium[pf2e.spells-srd.IihxWhRfpsBgQ5jS]{Discours captivant} comme un sort inné occulte de niveau 3 une fois par jour.</p>
