--- a/data/feats/ancestry-09-ulQzdBOnZH9LQu8M.htm
+++ b/data/feats/ancestry-09-ulQzdBOnZH9LQu8M.htm
@@ -6,10 +6,10 @@ PrereqFR: Gobelin torche
 
 ------ Benefits and spoiler ----
 Benefits: Your bodily fluids burn with surprising volatility, as if you ran on oil instead of blood.
-Avantage: Vos fluides corporels brûlent avec une volatilité surprenante, comme si vous fonctionniez avec de l'huile au lieu du sang.
+Avantage: Lorsque vous êtes en feu, vous pouvez infliger une attaque à mains nues à ç m infligeant 1d6 dégâts de feu.
 
 ------ Description (en) ------
 <p>Your bodily fluids burn with surprising volatility, as if you ran on oil instead of blood. As long as you are taking persistent fire damage, you gain a boiling spit ranged unarmed attack with a range of 30 feet that deals 1d6 fire damage.</p>
 ------ Description (fr) ------
 <p>Vos fluides corporels brûlent avec une volatilité surprenante, comme si vous étiez fait d'huile plutôt que de sang.</p>
-<p>Tant que vous subissez des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts de feu persistants}, vous obtenez une attaque à mains nues à distance de crachat bouillant d'une portée de 9 m qui inflige 1d6 dégât de feu.</p>
+<p>Tant que vous subissez des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts de feu persistants}, vous obtenez une attaque à mains nues à distance de crachat bouillant d'une portée de 9 m qui inflige 1d6 dégâts de feu.</p>
