--- a/data/equipment/backpack-13-k5y89wYu3NX1AhVI.htm
+++ b/data/equipment/backpack-13-k5y89wYu3NX1AhVI.htm
@@ -1,7 +1,6 @@
 Name: Bomber's Saddle
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Selle de Bombardier
+État: libre
 
 ------ Description (en) ------
 <p>Developed by urdefhans for their skaveling mounts but quickly copied by other races' cavalry, this leather saddle is made from cave worm hide and is designed to fit a variety of flying steeds. In addition to a seat for the rider, the bomber's saddle has a bomb compartment situated underneath the mount.</p>
@@ -16,14 +15,13 @@ Nom:
 <p>On a failure, the bombs fly away wildly and deal no damage.</p>
 <p>On a successful attack roll, the bombs fall and shatter, starting in the target area and moving in a line of 5-foot spaces up to 30 feet long for six bombs, one bomb per space. The bombs don't directly hit any creatures; instead, creatures take splash damage from the bombs as usual, but combine the splash damage from multiple overlapping bombs together before applying weaknesses or resistances. Apply any effects normally applied to splash damage when throwing a bomb (such as the effects of the Calculated Splash feat).</p>
 ------ Description (fr) ------
-Développée par les Urdefhans pour leurs montures de skaveling, mais rapidement copiée par la cavalerie des autres races, cette selle en cuir est fabriquée à partir de la peau d'un ver des cavernes et est conçue pour s'adapter à une variété de destriers volants. En plus d'un siège pour le cavalier, la selle de bombardier possède un compartiment à bombes situé sous la monture.</p>
+Développée par les Urdefhans pour leurs montures Skavelings, mais rapidement copiée par la cavalerie des autres races, cette selle en cuir est fabriquée à partir de la peau d'un Ver des cavernes et est conçue pour s'adapter à une variété de destriers volants. En plus d'un siège pour le cavalier, la selle de bombardier possède un compartiment à bombes situé sous la monture.</p>
 Le compartiment peut contenir jusqu'à six bombes alchimiques d'un poids léger ou négligeable.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<p><strong>Effet</strong> Vous laissez tomber un seul objet du compartiment de la selle'qui tombe sur le sol en dessous. Si l'objet est une bombe, effectuez une frappe à distance avec elle.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Effet</strong> Vous laissez tomber un seul objet du compartiment de la selle qui chute sur le sol en dessous. Si l'objet est une bombe, effectuez une frappe à distance avec elle.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">D</span> Interact</p>
-<p><strong>Exigences</strong> Le compartiment de la selle'est chargé de deux à six bombes</p>
+<p><strong>Prérequis</strong> Le compartiment de la selle'est chargé de deux à six bombes</p>
 <p><strong>Effet</strong> Vous laissez tomber la totalité de la charge de la selle, éparpillant les bombes en dessous. Effectuez une seule frappe à distance contre une CA de 10. La CA augmente de 1 pour chaque tranche de 1,5 mètre au-dessus de la zone cible où vous vous trouvez.</p>
 En cas d'échec, les bombes s'envolent sauvagement et n'infligent aucun dégât</p>
-<p>Sur un jet d'attaque réussi, les bombes tombent et éclatent, en commençant dans la zone cible et en se déplaçant en ligne dans des espaces de 5 pieds jusqu'à 30 pieds de long pour six bombes, une bombe par espace. Les bombes ne touchent pas directement les créatures ; à la place, les créatures subissent les dégâts d'éclaboussures des bombes comme d'habitude, mais combinent les dégâts d'éclaboussures de plusieurs bombes superposées avant d'appliquer les faiblesses ou les résistances. Appliquez tous les effets normalement appliqués aux dégâts d'éclaboussures lorsque vous lancez une bombe (comme les effets de l'exploit Éclaboussures calculées).</p>
+<p>Sur un jet d'attaque réussi, les bombes tombent et éclatent, en commençant dans la zone cible et en se déplaçant en ligne dans des espaces de 3,5 mètres jusqu'à 9 mètres de long pour six bombes, une bombe par espace. Les bombes ne touchent pas directement les créatures ; à la place, les créatures subissent comme d'habitude, les dégâts d'éclaboussures des bombes, mais combinent les dégâts d'éclaboussures de plusieurs bombes superposées avant d'appliquer les faiblesses ou les résistances. Appliquez tous les effets normalement appliqués aux dégâts d'éclaboussures lorsque vous lancez une bombe (comme les effets de l'exploit @Compendium[pf2e.feats-srd.UjWLK86BgHxz3Itd]{Éclaboussures calculées}).</p>
