--- a/data/feats/ancestry-09-VazbV1s93eZqUZIu.htm
+++ b/data/feats/ancestry-09-VazbV1s93eZqUZIu.htm
@@ -1,9 +1,12 @@
 Name: Improvisational Warrior
 Nom: Combattant improvisé
 PrereqEN: Improvisational Defender
-Avantage:
 PrereqFR: Défenseur improvisé
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: En cas de coup critique avec une arme improvisée, vous appliquez un effet de critique spécialisé.
 
 ------ Description (en) ------
 <p>When you use an improvised weapon, you apply the critical specialization of a brawling weapon to it. Depending on the shape and nature of the improvised weapon, your GM might determine another weapon group's critical specialization is more appropriate.</p>
