--- a/data/feats/ancestry-09-vtCrMziYxNyj8kP7.htm
+++ b/data/feats/ancestry-09-vtCrMziYxNyj8kP7.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With effort, you can call forth magical wings from your back, similar in appearance to those of your celestial forebears.
-Avantage: Avec un peu d'effort, vous pouvez faire sortir de votre dos des ailes magiques, d'apparence similaire à celles de vos ancêtres célestes.
+Avantage: Vous obtenez une vitesse de Vol égale à votre Vitesse au sol pendant 10 minutes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
