--- a/data/feats/ancestry-09-VphmK5JRR35SyEhV.htm
+++ b/data/feats/ancestry-09-VphmK5JRR35SyEhV.htm
@@ -2,14 +2,14 @@ Name: Pervasive Superstition
 Nom: Superstition omniprésente
 PrereqEN: Orc Superstition
 PrereqFR: Superstition orque
-État: officielle
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You steep yourself in superstition and practice ancient orc mental exercises for shrugging off the effects of magic.
-Avantage: Vous vous imprégnez de superstitions et pratiquez d'anciens exercices mentaux orcs pour vous débarrasser des effets de la magie.
+Avantage: Vous bénéficiez d’un bonus de circonstances de +1 à vos jets de sauvegarde contre les sorts et les effets magiques.
 
 ------ Description (en) ------
 <p>You steep yourself in superstition and practice ancient orc mental exercises for shrugging off the effects of magic. You gain a +1 circumstance bonus to saving throws against spells and magical effects at all times.</p>
 ------ Description (fr) ------
-<p>Vous êtes tellement baigné de superstitions orques que votre pratique des exercices mentaux de vos ancêtres vous aide à ignorer les effets de la magie.</p>
-<p>Vous bénéficiez d’un bonus de circonstances de +1 à vos jets de sauvegarde contre les sorts et les effets magiques en toutes circonstances.</p>
+<p>Vous avez tellement baigné dans les superstitions orques que votre pratique des exercices mentaux de vos ancêtres vous aide à ignorer les effets de la magie.</p>
+<p>Vous bénéficiez d’un bonus de circonstances de +1 à vos jets de sauvegarde contre les sorts et les effets magiques constamment.</p>
