--- a/data/feats/ancestry-09-WQa6PxkOgyvRpaaM.htm
+++ b/data/feats/ancestry-09-WQa6PxkOgyvRpaaM.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Intimidation
 
 ------ Benefits and spoiler ----
 Benefits: You give a throaty growl to attempt to Demoralize a creature you just found.
-Avantage: Vous émettez un grognement guttural pour tenter de démoraliser une créature que vous venez de trouver.
+Avantage: Vous démoralisez les créatures que vous débusquez.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You successfully Seek a hidden or undetected creature.</p>
@@ -15,4 +15,5 @@ Avantage: Vous émettez un grognement guttural pour tenter de démoraliser une c
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous obtenez un succès en Cherchant une créature cachée ou non détectée.</p>
 <hr />
-<p>Vous poussez un grognement sourd pour Démoraliser une créature que vous venez juste de trouver. Vous ne subissez pas la pénalité de –4 liée au fait de ne pas partager de langue avec cette créature.</p>
+<p>Vous poussez un grognement sourd pour Démoraliser une créature que vous venez juste de débusquer.</p>
+<p>Vous ne subissez pas la pénalité de –4 liée au fait de ne pas partager de langue avec cette créature.</p>
