--- a/data/feats/ancestry-09-WSxHCapuTn8uRdLI.htm
+++ b/data/feats/ancestry-09-WSxHCapuTn8uRdLI.htm
@@ -1,14 +1,15 @@
 Name: Dragon Grip
-Nom: Prise du dragon
+Nom: Emprise du dragon
 PrereqEN: Beast Trainer
 PrereqFR: Dresseur de bête
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your hold has a unique draconic connection.
-Avantage: Votre prise a une connexion draconique unique.
+Avantage: Vous avez accès au drake de monte et savez amadouer les dragons.
 
 ------ Description (en) ------
 <p>Your hold has a unique draconic connection. You gain a +2 circumstance bonus when you attempt to Make an Impression on a creature with the dragon trait. You gain access to the Riding Drake animal companion.</p>
 ------ Description (fr) ------
-<p>Votre prise possède un unique lien draconique. Vous obtenez un bonus de circonstances de +2 lorsque vous tentez de Faire bonne impression sur une créature avec le trait dragon. Vous obtenez l'accès au compagnon animal Drake de monte.</p>
+<p>Votre forteresse possède un lien draconique unique.</p>
+<p>Vous obtenez un bonus de circonstances de +2 lorsque vous tentez de Faire bonne impression sur une créature avec le trait dragon. Vous obtenez l'accès au compagnon animal Drake de monte.</p>
