--- a/data/feats/ancestry-09-wGzKq2cx1b2Ycl4u.htm
+++ b/data/feats/ancestry-09-wGzKq2cx1b2Ycl4u.htm
@@ -6,7 +6,7 @@ PrereqFR: nain sang ancien
 
 ------ Benefits and spoiler ----
 Benefits: Your ancestors’ defiance of magic and your people’s strictly egalitarian mindset mean that certain forms of magic have little effect on you.
-Avantage: La défiance de vos ancêtres envers la magie et la mentalité strictement égalitaire de votre peuple font que certaines formes de magie ont peu d'effet sur vous.
+Avantage: Vous diminuez les échecs critiques contre les sorts divins.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Vahird ethnicity</p>
@@ -16,4 +16,4 @@ Avantage: La défiance de vos ancêtres envers la magie et la mentalité stricte
 <p><strong>Accès</strong> ethnie Vahird</p>
 <hr />
 <p>La méfiance de vos ancêtres vis-à-vis de la magie et l'état d'esprit strictement égalitaire de votre peuple font que certaines formes de magie n'ont que peu d'effet sur vous.</p>
-<p>Lorsque vous utilisez votre réaction @Compendium[pf2e.actionspf2e.8w6esW689NNbbq3i]{Appel du sang ancien} contre un sort divin et obtenez un échec critique sur le jet de sauvegarde contre ce sort, vous n'obtenez qu'un échec à la place.</p>
+<p>Lorsque vous utilisez votre réaction @Compendium[pf2e.actionspf2e.8w6esW689NNbbq3i]{Appel du sang ancien} contre un sort divin et obtenez un échec critique sur le jet de sauvegarde contre ce sort, vous considérez qu'il s'agit d'un échec à la place.</p>
