--- a/data/feats/ancestry-09-xDCtfNtbnaG166cy.htm
+++ b/data/feats/ancestry-09-xDCtfNtbnaG166cy.htm
@@ -7,9 +7,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The magic of jann runs through your blood.
-Avantage: La magie de Jann court dans votre sang.
+Avantage: Vous pouvez lancer Agrandissement et Communication avec les animaux une fois par jour chacun.
 
 ------ Description (en) ------
 <p>The magic of jann runs through your blood. You can cast @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge} and @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Speak with Animals} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie d'un Jann coule dans vos veines. Vous pouvez lancer @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
+<p>La magie d'un Jann coule dans vos veines.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
