--- a/data/equipment/consumable-01-CeKPffF0FaEyhLMp.htm
+++ b/data/equipment/consumable-01-CeKPffF0FaEyhLMp.htm
@@ -1,5 +1,5 @@
 Name: Spear Frog Poison
-Nom: 
+Nom: Poison de Grenouille-liane
 État: changé
 État d'origine: auto-trad
 
@@ -12,10 +12,10 @@ Nom:
 <p><strong>Stage 1</strong> [[/r 1d4#poison]] poison damage (1 round)</p>
 <p><strong>Stage 2</strong> [[/r 1d6#poison]] poison damage and @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 (1 round)</p>
 ------ Description (fr) ------
-Une seule grenouille liane produit suffisamment de toxine pour fabriquer une dose de poison pour grenouille liane ;
+Une seule Grenouille-liane produit suffisamment de toxine pour fabriquer une dose de poison de grenouille-liane ;
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">D</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 15 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> DD 15 Force</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
 <p><strong>Stade 1</strong> [[/r 1d4#poison]] dégâts de poison (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 1d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 1d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
