--- a/data/feats/ancestry-09-Xwk41o4fERfM07NR.htm
+++ b/data/feats/ancestry-09-Xwk41o4fERfM07NR.htm
@@ -2,14 +2,14 @@ Name: Rokoan Arts
 Nom: Arts Rokoans
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Ancestral spirits have begun to bond themselves to you, granting you powers characteristic of a rokoa.
-Avantage: Les esprits ancestraux ont commencé à se lier à toi, te conférant des pouvoirs caractéristiques d'un rokoa.
+Avantage: Vous pouvez lancer Communication avec les animaux et Rapport une fois par jour chacun.
 
 ------ Description (en) ------
 <p>Ancestral spirits have begun to bond themselves to you, granting you powers characteristic of a rokoa. You can cast @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Speak with Animals} and @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Status}<em> </em>as primal innate spells once per day each.</p>
 ------ Description (fr) ------
-<p>Les esprits ancestraux ont commencé à se lier à vous, vous accordant les pouvoirs caractéristiques d'un Rokoa. Vous pouvez lancer @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Statut} comme des sorts innés primordiaux chacun une fois par jour.</p>
+<p>Les esprits ancestraux ont commencé à se lier à vous, vous accordant les pouvoirs caractéristiques d'un Rokoa.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Rapport} comme des sorts innés primordiaux une fois par jour chacun.</p>
