--- a/data/feats/ancestry-09-ZGT7NLpcvREkJsMd.htm
+++ b/data/feats/ancestry-09-ZGT7NLpcvREkJsMd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You trigger your body's repair programming, causing your body's nanites to heal your wounds.
-Avantage: Vous déclenchez le programme de réparation de votre corps, ce qui amène les nanites de votre corps à guérir vos blessures.
+Avantage: Une fois par jour, vous obtenez guérison accélérée égale à la moitié de votre niveau pendant 1 minute.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Vous déclenchez le programme de réparation de votre corps, ce qui am
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous déclenchez le programme de réparation de votre corps, permettant à vos nanites de soigner vos blessures. Vous obtenez guérison accélérée égale à la moitié de votre niveau pendant 1 minute. tant que le module de réparation est actif, vous ne pouvez pas utiliser d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
+<p>Vous déclenchez le programme de réparation de votre corps, permettant à vos nanites de soigner vos blessures.</p>p>
+<p>Vous obtenez guérison accélérée égale à la moitié de votre niveau pendant 1 minute. tant que le module de réparation est actif, vous ne pouvez pas utiliser d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
