--- a/data/feats/ancestry-09-ZPK2Un5ChzeNc9Dx.htm
+++ b/data/feats/ancestry-09-ZPK2Un5ChzeNc9Dx.htm
@@ -6,7 +6,7 @@ PrereqFR: au moins un sort inné arcanique ou occulte obtenu par un héritage gn
 
 ------ Benefits and spoiler ----
 Benefits: You've learned a few magical techniques for getting yourself both into and out of trouble unnoticed.
-Avantage: Vous avez appris quelques techniques magiques pour vous mettre dans le pétrin et vous en sortir sans vous faire remarquer.
+Avantage: Vous pouvez Lancer Détection faussée et Silence une fois par jour chacun en vous prenant pour cible.
 
 ------ Description (en) ------
 <p>You've learned a few magical techniques for getting yourself both into and out of trouble unnoticed. You gain @Compendium[pf2e.spells-srd.c2bTWBNO1BYX4Zfg]{Misdirection} and @Compendium[pf2e.spells-srd.gIdDLrbswTV3OBJy]{Silence} as 2nd-level arcane or occult innate spells.</p>
