--- a/data/feats/ancestry-09-ZcKW5n7F0oAqRw5o.htm
+++ b/data/feats/ancestry-09-ZcKW5n7F0oAqRw5o.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your life has been spent challenging death itself, and proximity to that implacable foe only makes your heart beat harder.
-Avantage: Vous avez passé votre vie à défier la mort elle-même, et la proximité de cet ennemi implacable ne fait que faire battre votre cœur plus fort.
+Avantage: Si vous êtes Blessé, vous obtenez un bonus de circontances de +2 au jet de Vigueur.
 
 ------ Description (en) ------
 <p>Your life has been spent challenging death itself, and proximity to that implacable foe only makes your heart beat harder.</p>
