--- a/data/feats/ancestry-09-zsWIZQeVhIihNw6M.htm
+++ b/data/feats/ancestry-09-zsWIZQeVhIihNw6M.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your next fire spell leaves embers in its wake.
-Avantage: Votre prochain sort de feu laissera des braises dans son sillage.
+Avantage: La zone d'un de vos sorts de feu devient un terrain difficile et dangereux.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Votre prochain sort de feu laissera des braises dans son sillage.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Votre prochain sort de  feu laisse des cendres sur son passage. Si votre prochaine action consiste à Lancer un sort avec le trait feu, pendant 1 minute, la zone de votre sort devient un terrain difficile et dangereux, infligeant 1 dégât de feu pour chaque case qu'une créature traverse.</p>
+<p>Votre prochain sort de feu laisse des braises dans son sillage.</p>
+<p>Si votre prochaine action consiste à Lancer un sort avec le trait feu, pendant 1 minute, la zone de votre sort devient un terrain difficile et dangereux, infligeant 1 dégât de feu pour chaque case qu'une créature traverse.</p>
