--- a/data/feats/ancestry-09-zsubK6PaY58fOYCb.htm
+++ b/data/feats/ancestry-09-zsubK6PaY58fOYCb.htm
@@ -6,7 +6,7 @@ PrereqFR: Superstition léchi
 
 ------ Benefits and spoiler ----
 Benefits: You have a keepsake that grants you luck.
-Avantage: Vous avez un souvenir qui vous porte chance.
+Avantage: Un grigri vous octroie un bonus de circonstances de +1 aux jets de sauvegarde contre les sorts et les effets magiques.
 
 ------ Description (en) ------
 <p>You have a keepsake that grants you luck. You gain a +1 circumstance bonus to saves against spells and magical effects at all times, not just when you use Leshy Superstition. If you lose the keepsake, you lose the bonus until you designate a new keepsake, typically over the course of a week.</p>
