--- a/data/feats/ancestry-09-YDHr12qVA3XRjkLP.htm
+++ b/data/feats/ancestry-09-YDHr12qVA3XRjkLP.htm
@@ -6,7 +6,7 @@ PrereqFR: attaque à mains nues de crocs
 
 ------ Benefits and spoiler ----
 Benefits: You emulate your vampiric parent's techniques for drawing blood from a victim.
-Avantage: Tu imites les techniques de tes parents vampiriques pour prélever le sang d'une victime.
+Avantage: En cas de critique, vos Frappes de crocs infligent 1d4 dégâts de saignement persistants.
 
 ------ Description (en) ------
 <p>You emulate your vampiric parent's techniques for drawing blood from a victim. Your fangs Strikes deal an additional [[/r 1d4 #persistent bleed]] persistent bleed damage on a critical hit.</p>
