--- a/data/feats/ancestry-09-Z2EiYMtGoNnwW6Tk.htm
+++ b/data/feats/ancestry-09-Z2EiYMtGoNnwW6Tk.htm
@@ -6,7 +6,7 @@ PrereqFR: Nature coopérative
 
 ------ Benefits and spoiler ----
 Benefits: You have developed a soul-deep bond with your comrades and maintain an even greater degree of cooperation with them.
-Avantage: Vous avez développé un lien profond avec vos camarades et entretenez un degré de coopération encore plus grand avec eux.
+Avantage: Si vous êtes expert dans une compétence, votre aide est toujours un succès.
 
 ------ Description (en) ------
 <p>You have developed a soul-deep bond with your comrades and maintain an even greater degree of cooperation with them. If you are at least an expert in the skill you are Aiding, you get a success on any outcome rolled to Aid other than a critical success.</p>
