--- a/data/feats/ancestry-09-xM8IWff5yfbQGk4s.htm
+++ b/data/feats/ancestry-09-xM8IWff5yfbQGk4s.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to use roots, crevices, uneven ground, and dense underbrush to your advantage.
-Avantage: Vous avez appris à utiliser les racines, les crevasses, le sol irrégulier et les broussailles denses à votre avantage.
+Avantage: Vous pouvez vous mettre à l'abri à l'aide des caractéristiques d'un terrain difficile.
 
 ------ Description (en) ------
 <p>You’ve learned to use roots, crevices, uneven ground, and dense underbrush to your advantage. When you’re in difficult terrain from an environmental feature, you can Take Cover, even if the feature wouldn’t ordinarily be large enough for you to Take Cover.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à utiliser les racines, les fissures, les sols accidentés et les sous-bois denses à votre avantage. Lorsque vous êtes sur un terrain difficile du fait d'une caractéristique environnementale, vous pouvez vous Mettre à l'abri, même si la topographie du terrain n'est pas assez grande pour que vous puissiez vous Mettre à l'abri.</p>
+<p>Vous avez appris à utiliser les racines, les fissures, les sols accidentés et les sous-bois denses à votre avantage.</p>
+<p> Lorsque vous êtes sur un terrain difficile du fait d'une caractéristique environnementale, vous pouvez vous Mettre à l'abri, même si la topographie du terrain ne devrait pas normalement être suffisante pour que vous puissiez vous Mettre à l'abri.</p>
