--- a/data/feats/ancestry-09-zPJ2NyMv97AfkN3P.htm
+++ b/data/feats/ancestry-09-zPJ2NyMv97AfkN3P.htm
@@ -6,10 +6,10 @@ PrereqFR: expert en Occultisme
 
 ------ Benefits and spoiler ----
 Benefits: Your study of occult practices has shown you how to best defend against them.
-Avantage: Votre étude des pratiques occultes vous a montré comment vous défendre au mieux contre elles.
+Avantage: Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets occultes.
 
 ------ Description (en) ------
 <p>Your study of occult practices has shown you how to best defend against them. You gain a +1 circumstance bonus to all saving throws against occult effects.</p>
 ------ Description (fr) ------
-<p>Votre étude des pratiques occultes vous a montré comment mieux se défendre contre elles.</p>
+<p>Votre étude des pratiques occultes vous a montré comment mieux vous défendre contre elles.</p>
 <p>Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets occultes.</p>
