--- a/data/feats/ancestry-09-zZOycr00XDVTKuXa.htm
+++ b/data/feats/ancestry-09-zZOycr00XDVTKuXa.htm
@@ -6,7 +6,7 @@ PrereqFR: Férocité orque
 
 ------ Benefits and spoiler ----
 Benefits: You resist death's clutches with supernatural vigor.
-Avantage: Tu résistes aux griffes de la mort avec une vigueur surnaturelle.
+Avantage: L'utilisation de Férocité orque vous permet d'obtenir des Points de vie temporaires égaux à votre niveau.
 
 ------ Description (en) ------
 <p>You resist death's clutches with supernatural vigor. When you use Orc Ferocity, you gain temporary Hit Points equal to your level.</p>
