--- a/data/feats/ancestry-09-zpQEOqMDoujexNfA.htm
+++ b/data/feats/ancestry-09-zpQEOqMDoujexNfA.htm
@@ -2,14 +2,13 @@ Name: Replenishing Hydration
 Nom: Hydratation complète
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You draw life from the water around you.
-Avantage: Vous puisez la vie dans l'eau qui vous entoure.
+Avantage: vous regagnez des Points de vie en vous imergeant dans l'eau pendant 10 minutes.
 
 ------ Description (en) ------
 <p>You draw life from the water around you. If you submerge in water and rest for 10 minutes, you regain Hit Points equal to your Constitution modifier × half your level.</p>
 ------ Description (fr) ------
-<p>Vous régénérez la vie de l'eau. Si vous vous submergez dans l'eau et vous reposez pendant 10 minutes, vous regagnez des Points de vie égaux à votre modificateur de Constitution × la moitié de votre niveau.</p>
+<p>Vous vous régénérez en puisant la vie de l'eau qui vous entoure. Si vous vous submergez dans l'eau et vous reposez pendant 10 minutes, vous regagnez des Points de vie égaux à votre modificateur de Constitution × la moitié de votre niveau.</p>
