--- a/data/equipment/consumable-06-oDfucsKeWpJmmWN1.htm
+++ b/data/equipment/consumable-06-oDfucsKeWpJmmWN1.htm
@@ -1,5 +1,5 @@
 Name: Potion of Electricity Retaliation (Moderate)
-Nom: Potion de Riposte Électrique
+Nom: Potion de Riposte Électrique (modérée)
 État: libre
 
 ------ Description (en) ------
