--- a/data/equipment/consumable-03-67KiGZtoTMbl7nv2.htm
+++ b/data/equipment/consumable-03-67KiGZtoTMbl7nv2.htm
@@ -1,5 +1,5 @@
 Name: Potion of Fire Retaliation (Lesser)
-Nom: Potion de Riposte de feu (inférieure)
+Nom: Potion de Riposte Enflammée (inférieure)
 État: libre
 
 ------ Description (en) ------
@@ -8,5 +8,5 @@ Nom: Potion de Riposte de feu (inférieure)
 <p>The aura deals 1d4 fire damage.</p>
 ------ Description (fr) ------
 <p><strong>Activaion/strong> <span class="pf2-icon">1</span> Interagir</p>
-<p>Pendant 1 minute après avoir bu une potion de Risposte de feu, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de feu.</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte Enflammée, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de feu.</p>
 L'aura inflige 1d4 points de dégâts de feu.</p>
