--- a/data/equipment/consumable-12-vMs9n8oXlZttcJkX.htm
+++ b/data/equipment/consumable-12-vMs9n8oXlZttcJkX.htm
@@ -1,5 +1,5 @@
 Name: Focus Cathartic (Greater)
-Nom: Élixir de Concentration purificateur
+Nom: Élixir de Concentration purificateur (supérieur)
 État: libre
 
 ------ Description (en) ------
